<resources>

    <!-- app -->
    <string name="app_name">Pick a name</string>

    <!-- Navigation -->
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Pick A Name</string>
    <string name="nav_header_subtitle">A vous de choisir un prénom</string>
    <string name="nav_sorting_title">Les prénoms</string>
    <string name="nav_sorting">A trier</string>
    <string name="nav_accepted">Retenus</string>
    <string name="nav_refused">Refusés</string>
    <string name="nav_application">Application</string>
    <string name="nav_settings">Configuration</string>
    <string name="nav_reinitialisation">Réinitialisation</string>
    <string name="nav_feedback">Votre avis</string>

    <!-- fragment settings -->
    <string name="fragment_setting_title">Configuration</string>
    <string name="fragment_settings_loading_error">Oups, une erreur est survenue lors de la récupération de votre configuration</string>
    <string name="fragment_settings_save_success">Sauvegarde OK</string>
    <string name="fragment_settings_save_failure">Sauvegarde KO</string>
    <string-array name="fragment_settings_research_spinner">
        <item>GIRL</item>
        <item>BOY</item>
        <item>BOTH</item>
    </string-array>

    <!-- fragment sorting -->
    <string name="fragment_sort_title">Trier</string>
    <string name="fragment_sort_accept_error">Problème pendant l\'enregistrement</string>
    <string name="fragment_sort_refuse_error">Problème pendant l\'enregistrement</string>

    <!-- fragment accepted -->
    <string name="fragment_accepted_title">Prénoms retenus</string>

    <!-- fragment rejected -->
    <string name="fragment_rejected_title">Prénoms rejetés</string>

    <!-- fragment feedback-->
    <string name="fragment_feedback_title">Feedback</string>

    <!-- fragment reinitialize -->
    <string name="fragment_reinit_title">Réinitialisation</string>
    <string name="fragment_reinit_success">Configuration réinitialisée</string>
    <string name="fragment_reinit_failed">Erreur pendant la réinitialisation</string>

</resources>
